--- a/ui/package.json
+++ b/ui/package.json
@@ -1,41 +1,25 @@
 {
-  "name": "ui",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
+  "name": "corona-viewer-react",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.4",
-    "@angular/cdk": "^7.1.0",
-    "@angular/cli": "^7.0.6",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "typescript": "~3.1.6",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "@types/socket.io-client": "^1.4.32",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "socket.io-client": "^2.1.1",
-    "zone.js": "~0.8.26"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "2.1.5"
   },
-  "devDependencies": {
-    "codelyzer": "^4.5.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
