--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "TCSCODER",
   "license": "none",
   "devDependencies": {
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "eslint": "5.12.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
