--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "google-map-react": "^1.1.2",
     "lodash": "^4.17.11",
     "react": "^16.8.3",
+    "react-countup": "^4.1.1",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
