--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "geocoder-geojson": "^1.11.0",
     "google-map-react": "^1.1.2",
     "lodash": "^4.17.11",
     "react": "^16.8.3",
     "react-countup": "^4.1.1",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
